maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:11: error: missing argument list for method setDirection in class AbstractBuggle
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setDirection _` or `setDirection(_)` instead of `setDirection`.
    setDirection()=Direction.NORD
    ^IslandMaze:17: error: missing argument list for method setDirection in class AbstractBuggle
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setDirection _` or `setDirection(_)` instead of `setDirection`.
      setDirection()=Direction.NORD
      ^